syntax = "proto3";

package runm;

import "common.proto";
import "object_definition.proto";
import "partition.proto";
import "provider.proto";
import "provider_type.proto";
import "search.proto";
import "session.proto";

// The runm-api gRPC service is the user-facing interface into runmachine
service RunmAPI {
    // Returns information about a specific partition
    rpc partition_get(PartitionGetRequest) returns (Partition) {}

    // Returns information about partitions
    rpc partition_list(PartitionListRequest) returns (
        stream Partition) {}

    // Create a new partition
    rpc partition_create(CreateRequest) returns (
        PartitionCreateResponse) {}

    // Returns information about a specific provider type
    rpc provider_type_get(ProviderTypeGetRequest) returns (ProviderType) {}

    // Returns information about provider types
    rpc provider_type_list(ProviderTypeListRequest) returns (
        stream ProviderType) {}

    // Returns information about a specific provider definition
    rpc provider_definition_get(ProviderDefinitionGetRequest) returns (
        ObjectDefinition) {}

    // Defines a schema and permissions for properties on providers
    rpc provider_definition_set(ProviderDefinitionSetRequest) returns (
        ObjectDefinitionSetResponse) {}

    // Returns information about a specific provider
    rpc provider_get(ProviderGetRequest) returns (Provider) {}

    // Returns information about providers
    rpc provider_list(ProviderListRequest) returns (stream Provider) {}

    // Create a new provider
    rpc provider_create(CreateRequest) returns (
        ProviderCreateResponse) {}

    // Deletes one or more provideres
    rpc provider_delete(ProviderDeleteRequest) returns (
        DeleteResponse) {}
}

enum PayloadFormat {
    YAML = 0;
    PROTOBUFFER = 1;
}

message CreateRequest {
    Session session = 1;
    PayloadFormat format = 2;
    // Raw bytes representing the new representation of the object. The server
    // is responsible for unmarshaling this raw payload.
    bytes payload = 3;
}

message PartitionGetRequest {
    Session session = 1;
    PartitionFilter filter = 2;
}

message PartitionListRequest {
    Session session = 1;
    SearchOptions options = 2;
    repeated PartitionFilter any = 3;
}

message ProviderTypeGetRequest {
    Session session = 1;
    ProviderTypeFilter filter = 2;
}

message ProviderTypeListRequest {
    Session session = 1;
    SearchOptions options = 2;
    repeated ProviderTypeFilter any = 3;
}

message ProviderDefinitionGetRequest {
    Session session = 1;
    // The UUID of the partition the object definition applies to, or empty
    // string to return the global default object definition for providers
    string partition = 2;
    // The type of provider the object definition applies to, or empty string
    // to return the object definition for the global or partition default for
    // providers
    string provider_type = 3;
}

message ProviderDefinitionSetRequest {
    Session session = 1;
    PayloadFormat format = 2;
    // Raw bytes representing the new representation of the object. The server
    // is responsible for unmarshaling this raw payload.
    bytes payload = 3;
    // The UUID of the partition the definition applies to, or empty string to
    // set the global default definition for providers
    string partition = 4;
    // The type of provider the object definition applies to, or empty string
    // to apply the object definition as the global or partition default for
    // providers
    string provider_type = 5;
}

message ProviderGetRequest {
    Session session = 1;
    ProviderFilter filter = 2;
}

message ProviderListRequest {
    Session session = 1;
    SearchOptions options = 2;
    repeated ProviderFilter any = 3;
}

message ProviderDeleteRequest {
    Session session = 1;
    // A set of filter expressions that are OR'd together when determining
    // matches for deletion
    repeated ProviderFilter any = 2;
}
